Hardening phase: security, quality, exception handling, double-submit protection
Backend:
- SecurityConfig: STATELESS session, rate limit filter runs as standalone @Component (ne dvaput)
- JwtUtil: kešira SecretKey via @PostConstruct umesto rekonstrukcije pri svakom pozivu
- JwtChannelInterceptor: null check za accessor pre obrade STOMP CONNECT poruke
- RateLimitFilter: LRU eviction (maks 10.000 bucket-a), X-Forwarded-For uzima poslednji IP
- RateLimitFilter: ispravljen endpoint /api/auth/forgot-password
- AdService: dodat findAllActiveByUser (javni profil prikazuje samo ACTIVE oglase)
- AdRepository: findByIdForUpdate vraća Optional<Ad>, dodat findAllByOwnerIdAndAdStatus
- AdMapper: null-safe getLocation(), uklonjena redundantna PriceInterval.valueOf()
- RentalContractServiceImpl: validacija datuma, notifikacije za kontra-ponudu i otkaz zahteva
- RentalContractServiceImpl: zaštita od SQL injection u sortiranju (ALLOWED_SORT_FIELDS whitelist)
- RentalContractServiceImpl: @Recover vraća RentalContractDto (ispravan generik tip)
- RentalContractController: key u response mapi "Contracts: " → "contracts"
- ReviewServiceImpl: rok za ocenu 30 dana, HtmlSanitizer na komentar
- ChatServiceImpl: validacija dužine i prazne poruke, @Transactional na sendMessage
- UserController: null check za social login tokene pre poziva service-a
- NotificationServiceImpl: push subscription upsert (briše stari za isti endpoint), SLF4J logging
- EmailVerificationServiceImpl/PasswordResetServiceImpl: email tekstovi na srpskom
- Svi servisi: jakarta.transaction → org.springframework.transaction.annotation.Transactional
- Svi servisi: RuntimeException → specifične exception klase
- Entiteti User i Notification: equals/hashCode baziran na ID

Frontend:
- errorInterceptor: X-Is-Retry header sprečava beskonačnu petlju refresh-a, /user/me 401 se ignoriše
- auth.service.ts: dodat error handler za ws-token i /user/me poziv
- ad-list.component: homeDataDestroy$ za otkazivanje nedovršenih home zahteva,